# Super-Knowledge-Base

./: .gitignore  LICENSE  README.md  README.zh-CN.md  README_CN.md  README_EN.md  package-lock.json  package.json  page_jump_test.html
.workbuddy/memory/: 2026-07-12.md
apps/desktop/: components.d.ts  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/desktop/src/: App.tsx  main.ts  main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: error.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: chat.rs  claude_config.rs  documents.rs  knowledge_base.rs  mod.rs  parsing.rs  python_service.rs  settings.rs
apps/desktop/src-tauri/src/mineru/: agent.rs  mod.rs  precise.rs
apps/desktop/src-tauri/src/models/: mod.rs  settings.rs
apps/desktop/src-tauri/src/storage/: file_store.rs
apps/desktop/src/components/chat/: ChatInput.tsx  ChatInput.vue  ChatInterface.tsx  ChatMarkdown.tsx  ChatMarkdown.vue  ChatMessageList.tsx  ChatMessageList.vue  ChatPage.tsx  ChatPage.vue  KBSelector.tsx  KBSelector.vue  MessageRow.tsx  MessageRow.vue  SourcesPanel.tsx  SourcesPanel.vue  ThinkingBlock.vue  ToolCallCards.tsx  ToolCallCards.vue
apps/desktop/src/components/common/: ChunkDetailDialog.tsx  ChunkDetailDialog.vue  ConfirmDialog.vue  ErrorBoundary.vue  ErrorDialog.tsx  ErrorDialog.vue  IndexingStatusDialog.vue  MarkdownRenderer.tsx  MarkdownRenderer.vue  UserGuideDialog.vue
apps/desktop/src/components/documents/: DocumentManager.tsx  DocumentManager.vue  DocumentPreview.tsx  DocumentPreview.vue  ImageDialog.tsx  ImageDialog.vue
apps/desktop/src/components/knowledge-base/: ImportExport.tsx  ImportExport.vue  KBDashboard.tsx  KBDashboard.vue  KBSettings.tsx  KBSettings.vue  MoveCopyDialog.tsx  MoveCopyDialog.vue
apps/desktop/src/components/layout/: AppLayout.tsx  AppLayout.vue  Sidebar.tsx  Sidebar.vue  StatusBar.vue  TabBar.tsx  TabBar.vue  TitleBar.tsx  TitleBar.vue
apps/desktop/src/components/panels/: BookmarkPanel.vue  OutlinePanel.vue  SearchPanel.vue  SlidePanel.vue  ThumbnailPanel.vue
apps/desktop/src/components/reader/: ContextMenu.vue  (+2 more)
apps/desktop/src/composables/: useDocument.ts  useI18n.ts  useIpc.ts  useKeyboard.ts  usePageNavigation.ts  useTheme.ts
apps/desktop/src/i18n/: I18nProvider.tsx  index.ts  translations.ts
apps/desktop/src/router/: index.ts
apps/desktop/src/services/: memoryStore.ts  pythonClient.ts  tauriBridge.ts  toolDefinitions.ts  toolExecutor.ts  webSearch.ts
apps/desktop/src/stores/: annotations.ts  chatStore.ts  document.ts  kbStore.ts  settingsStore.ts  tabStore.ts  ui.ts  useChatStore.ts  useKBStore.ts  useSettingsStore.ts  useTabStore.ts
apps/desktop/src/styles/: academic.css  github.css  globals.css  variables.css
apps/desktop/src/types/: index.ts
apps/desktop/src/utils/: latexNormalize.ts  resolveImages.ts
apps/mcp-server/: build_mcp.py  local-kb-mcp.spec  pyproject.toml
apps/mcp-server/src/knowledge_mcp/: __init__.py  chunker.py  lancedb_client.py  mineru_client.py  server.py
docs/superpowers/plans/: 2026-07-08-vue-refactor-plan.md
docs/superpowers/specs/: 2026-07-08-vue-refactor-design.md
lancedb_data/__manifest/_transactions/: 0-4c9f33a2-294e-40be-99b0-d32148368e34.txn  0-ac69c5f4-7843-4dd4-b9b2-835cb110657b.txn
scripts/: release.ps1
services/python-backend/: build_backend.py  knowledge-backend.spec  pyproject.toml
services/python-backend/src/knowledge_backend/: __init__.py  bing_search.js  chunker.py  cli.py  config.py  embedding.py  llama_service.py  main.py  mcp_server.py  mineru_client.py  page_mapper.py  reranker.py  vision.py
services/python-backend/src/knowledge_backend/api/: __init__.py  chat.py  documents.py  knowledge_bases.py  search.py  settings.py  utils.py
services/python-backend/src/knowledge_backend/db/: __init__.py  lancedb_manager.py  schemas.py
(+6 files in other folders)
