[project]
name = "local-kb-mcp"
version = "0.1.0"
description = "MCP server for Local Knowledge Base — agent integration"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastmcp>=0.1",
    "lancedb>=0.13",
    "pyarrow>=17",
    "httpx>=0.27",
    "pydantic>=2.8",
    "pydantic-settings>=2.3",
]

[project.scripts]
local-kb-mcp = "knowledge_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_mcp"]
