[project]
name = "local-kb-mcp"
version = "1.0.0"
description = "MCP server for Local Knowledge Base"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastmcp>=0.1",
    "lancedb>=0.13",
    "pylance>=0.12",
    "pandas>=2.0",
    "pyarrow>=17",
    "httpx>=0.27",
    "pydantic>=2.8",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]

[project.scripts]
local-kb-mcp = "knowledge_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_mcp"]
