[project]
name = "knowledge-backend"
version = "2.0.0"
description = "Python backend service for SKB (Super Knowledge Base)"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.112",
    "uvicorn[standard]>=0.30",
    "lancedb>=0.13",
    "pylance>=0.12",
    "pandas>=2.0",
    "pyarrow>=17",
    "httpx>=0.27",
    "pydantic>=2.8",
    "pydantic-settings>=2.3",
    "sse-starlette>=2.1",
    "pypdf>=4.0",
    "fastmcp>=1.0",
]

[project.scripts]
knowledge-backend = "knowledge_backend.main:main"
skb-mcp = "knowledge_backend.mcp_server:main"

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_backend"]
